tests/errors/unresolved.vir
// Tests for UnresolvedType, UnresolvedComponent (in a driver), and
// Unknown component (in an expression).

// A port whose type annotation names a type that does not exist.
mod BadPortType {
    // CHECK: Unresolved type NoSuchType
    incoming inp : NoSuchType async

    outgoing out : Bit async

    out := true
}

// A driver statement that names a component that does not exist in this module.
mod BadDriverTarget {
    outgoing out : Bit async

    out := true
    // CHECK: Unresolved component ghost
    ghost := true
}

// An expression that references a name that is not a declared component.
mod BadExprRef {
    outgoing out : Bit async

    // CHECK: Unknown component doesnt_exist
    out := doesnt_exist
}

// Builtin types (Bit, Word[n], Clock) resolve fine — no UnresolvedType.
mod GoodTypes {
    incoming clk  : Clock
    incoming data : Word[8] on clk

    incoming flag : Bit on clk

    outgoing out  : Bit on clk

    // CHECK-NOT: Unresolved type
    out := flag
}

enum type Val {
    zero = 0w1
    one = 1
}

mod UnresolvedComponent {
    // CHECK: Unresolved component a
    a <= 0

    // CHECK: Unresolved component b
    b := 0

    // CHECK: Unresolved component c
    match #zero : Val {
        case #zero {
            c := 0
        }
        case #one {
            c := 1
        }
    }
}

mod Foo {}

mod UnresolvedModDefs {
    // CHECK-NOT: Unknown component
    mod foo of Foo

    // CHECK: Unresolved item Bar
    mod bar of Bar
}

// CHECK: Check failed
